--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body{
     font-family: 'Courier New', Courier, monospace;
 }
 
+hr{
+    border-color: black;
+}
+
 .container{
     padding: 30px;
     border-radius: 5px;
